--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://mesbah-uddin.github.io/notes/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "My New Site"
 theme = "ananke"
