--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-   "baseURL": "http://example.org/",
+   "baseURL": "https://mesbah-uddin.github.io/notes/
    "languageCode": "en-us",
    "title": "My New Hugo Site",
    "theme": "github.com/theNewDynamic/gohugo-theme-ananke"
